--- a/index.html
+++ b/index.html
@@ -3,58 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Control de LED - Gemelo Digital</title>
+  <title>Control de LED - Sistema de Gemelos Digitales</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #121212;
-      color: #ffffff;
+      background-color: #0d1117;
+      color: #c9d1d9;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     .btn-custom {
-      width: 180px;
+      width: 160px;
+    }
+    .glass-panel {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 15px;
+      padding: 30px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    }
+    .status-icon {
+      font-size: 1.2rem;
+      margin-right: 8px;
     }
   </style>
 </head>
 <body>
-  <div class="container text-center py-5">
-    <h1 class="mb-4">💡 Control de LED con Azure</h1>
-    <p class="mb-4">Controla tu LED físico desde la nube mediante Azure Functions</p>
+  <div class="container py-5">
+    <div class="glass-panel mx-auto text-center" style="max-width: 600px;">
+      <h1 class="mb-4">🔧 Sistema Inteligente de Control LED</h1>
+      <p class="mb-4">Supervisión y operación remota a través de Azure Digital Twins e IoT Hub</p>
 
-    <div class="btn-group btn-group-lg mb-4">
-      <button id="btnOn" class="btn btn-success btn-custom">Encender</button>
-      <button id="btnOff" class="btn btn-danger btn-custom">Apagar</button>
+      <div class="d-flex justify-content-center gap-3 mb-4">
+        <button id="btnOn" class="btn btn-success btn-custom"><i class="fas fa-lightbulb"></i> Encender</button>
+        <button id="btnOff" class="btn btn-danger btn-custom"><i class="fas fa-power-off"></i> Apagar</button>
+      </div>
+
+      <div id="status" class="mt-4 fs-5">
+        <span class="status-icon"><i class="fas fa-circle-notch fa-spin"></i></span>
+        <span class="fw-bold">Cargando estado...</span>
+      </div>
     </div>
-
-    <div id="status" class="mt-4 fs-5">Estado: <span class="fw-bold">esperando...</span></div>
   </div>
 
   <script>
-    // 👇 Dirección actualizada a tu Function App en Azure
     const URL_FUNCTION_SET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/cambiarestado";
     const URL_FUNCTION_GET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/leergemelo";
 
-    const statusLabel = document.querySelector("#status span");
+    const statusLabel = document.querySelector("#status span.fw-bold");
+    const statusIcon = document.querySelector("#status .status-icon i");
 
     document.getElementById("btnOn").addEventListener("click", () => enviarEstado("on"));
     document.getElementById("btnOff").addEventListener("click", () => enviarEstado("off"));
 
     async function enviarEstado(estado) {
-      statusLabel.textContent = "⏳ Enviando...";
+      statusLabel.textContent = "Enviando comando...";
+      statusIcon.className = "fas fa-spinner fa-spin text-info";
       try {
         const res = await fetch(URL_FUNCTION_SET, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ estado: estado })  // 🔧 Aquí el campo debe ser "estado", no "mensaje"
+          body: JSON.stringify({ estado })
         });
 
         if (res.ok) {
-          const resultado = await res.text();
           statusLabel.textContent = `✅ LED: ${estado.toUpperCase()}`;
+          statusIcon.className = "fas fa-check-circle text-success";
         } else {
           statusLabel.textContent = "⚠️ Error al enviar comando";
+          statusIcon.className = "fas fa-exclamation-triangle text-warning";
         }
       } catch (err) {
         statusLabel.textContent = "❌ Fallo de red o servidor";
+        statusIcon.className = "fas fa-times-circle text-danger";
         console.error(err);
       }
     }
@@ -64,13 +85,15 @@
         const res = await fetch(URL_FUNCTION_GET);
         if (res.ok) {
           const data = await res.json();
-          statusLabel.textContent = `🔎 Estado actual: ESCUCHANDO..`;
           statusLabel.textContent = `🔎 Estado actual: ${data.estado.toUpperCase()}`;
+          statusIcon.className = data.estado === "on" ? "fas fa-lightbulb text-warning" : "fas fa-power-off text-secondary";
         } else {
           statusLabel.textContent = "⚠️ No se pudo leer el estado";
+          statusIcon.className = "fas fa-question-circle text-muted";
         }
       } catch (err) {
         statusLabel.textContent = "❌ Error al obtener estado actual";
+        statusIcon.className = "fas fa-times-circle text-danger";
         console.error(err);
       }
     }
