--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Control de LED - Sistema de Gemelos Digitales</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sistema de Gemelos Digitales</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     body {
       background-color: #0d1117;
@@ -20,28 +20,48 @@
       border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 15px;
       padding: 30px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
     }
     .status-icon {
       font-size: 1.2rem;
       margin-right: 8px;
     }
+    .btn-custom.active {
+      box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.3);
+    }
+    .led-icon {
+      font-size: 4rem;
+      margin: 20px 0;
+    }
   </style>
 </head>
 <body>
   <div class="container py-5">
-    <div class="glass-panel mx-auto text-center" style="max-width: 600px;">
-      <h1 class="mb-4">🔧 Sistema Inteligente de Control LED</h1>
-      <p class="mb-4">Supervisión y operación remota a través de Azure Digital Twins e IoT Hub</p>
+    <div class="glass-panel mx-auto text-center" style="max-width: 700px;">
+      <h1 class="mb-3">🔧 Sistema de Gemelos Digitales</h1>
+      <p class="mb-4">Supervisión remota de LED y sensor DHT11 vía Azure</p>
 
-      <div class="d-flex justify-content-center gap-3 mb-4">
+      <!-- LED STATUS VISUAL -->
+      <i id="ledIcon" class="fas fa-lightbulb led-icon text-secondary"></i>
+
+      <!-- BOTONES -->
+      <div class="d-flex justify-content-center gap-3 mb-3">
         <button id="btnOn" class="btn btn-success btn-custom"><i class="fas fa-lightbulb"></i> Encender</button>
         <button id="btnOff" class="btn btn-danger btn-custom"><i class="fas fa-power-off"></i> Apagar</button>
       </div>
 
-      <div id="status" class="mt-4 fs-5">
+      <!-- ESTADO DEL LED -->
+      <div id="status" class="mt-2 fs-5 mb-4">
         <span class="status-icon"><i class="fas fa-circle-notch fa-spin"></i></span>
-        <span class="fw-bold">Cargando estado...</span>
+        <span class="fw-bold">Cargando estado del LED...</span>
+      </div>
+
+      <!-- DATOS DEL SENSOR -->
+      <div id="sensor" class="mt-4">
+        <h5 class="mb-3">🌡️ Datos del Sensor DHT11</h5>
+        <p>Temperatura: <span id="temp">--</span> °C</p>
+        <p>Humedad: <span id="hum">--</span> %</p>
+        <p>Hora de lectura: <span id="ts">--</span></p>
       </div>
     </div>
   </div>
@@ -49,12 +69,16 @@
   <script>
     const URL_FUNCTION_SET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/enviarmensaje";
     const URL_FUNCTION_GET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/leergemelo";
+    const URL_SENSOR_GET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/leersensor1";
 
     const statusLabel = document.querySelector("#status span.fw-bold");
     const statusIcon = document.querySelector("#status .status-icon i");
+    const ledIcon = document.getElementById("ledIcon");
+    const btnOn = document.getElementById("btnOn");
+    const btnOff = document.getElementById("btnOff");
 
-    document.getElementById("btnOn").addEventListener("click", () => enviarEstado("on"));
-    document.getElementById("btnOff").addEventListener("click", () => enviarEstado("off"));
+    btnOn.addEventListener("click", () => enviarEstado("on"));
+    btnOff.addEventListener("click", () => enviarEstado("off"));
 
     async function enviarEstado(estado) {
       statusLabel.textContent = "Enviando comando...";
@@ -67,8 +91,9 @@
         });
 
         if (res.ok) {
-          statusLabel.textContent = `✅ LED: ${estado.toUpperCase()}`;
-          statusIcon.className = "fas fa-check-circle text-success";
+          statusLabel.textContent = `✅ Comando enviado. Verificando estado...`;
+          statusIcon.className = "fas fa-spinner fa-spin text-info";
+          setTimeout(leerEstadoActual, 1000);
         } else {
           statusLabel.textContent = "⚠️ Error al enviar comando";
           statusIcon.className = "fas fa-exclamation-triangle text-warning";
@@ -85,8 +110,11 @@
         const res = await fetch(URL_FUNCTION_GET);
         if (res.ok) {
           const data = await res.json();
-          statusLabel.textContent = `🔎 Estado actual: ${data.estado.toUpperCase()}`;
+          statusLabel.textContent = `🔎 LED: ${data.estado.toUpperCase()}`;
           statusIcon.className = data.estado === "on" ? "fas fa-lightbulb text-warning" : "fas fa-power-off text-secondary";
+          ledIcon.className = data.estado === "on" ? "fas fa-lightbulb led-icon text-warning" : "fas fa-lightbulb led-icon text-secondary";
+          btnOn.classList.toggle("active", data.estado === "on");
+          btnOff.classList.toggle("active", data.estado === "off");
         } else {
           statusLabel.textContent = "⚠️ No se pudo leer el estado";
           statusIcon.className = "fas fa-question-circle text-muted";
@@ -98,7 +126,24 @@
       }
     }
 
+    async function leerSensor() {
+      try {
+        const res = await fetch(URL_SENSOR_GET);
+        if (res.ok) {
+          const data = await res.json();
+          document.getElementById("temp").textContent = data.temperatura ?? "--";
+          document.getElementById("hum").textContent = data.humedad ?? "--";
+          document.getElementById("ts").textContent = data.timestamp ?? "--";
+        }
+      } catch (err) {
+        console.error("Error leyendo sensor:", err);
+      }
+    }
+
     leerEstadoActual();
+    leerSensor();
+    setInterval(leerEstadoActual, 10000);
+    setInterval(leerSensor, 10000);
   </script>
 </body>
 </html>
