--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sistema de Gemelos Digitales</title>
+  <title>Control LED - Gemelo Digital</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
@@ -37,31 +37,20 @@
 </head>
 <body>
   <div class="container py-5">
-    <div class="glass-panel mx-auto text-center" style="max-width: 700px;">
-      <h1 class="mb-3">🔧 Sistema de Gemelos Digitales</h1>
-      <p class="mb-4">Supervisión remota de LED y sensor DHT11 vía Azure</p>
+    <div class="glass-panel mx-auto text-center" style="max-width: 600px;">
+      <h1 class="mb-3">💡 Control de LED</h1>
+      <p class="mb-4">Sistema de gemelo digital con Azure</p>
 
-      <!-- LED STATUS VISUAL -->
       <i id="ledIcon" class="fas fa-lightbulb led-icon text-secondary"></i>
 
-      <!-- BOTONES -->
       <div class="d-flex justify-content-center gap-3 mb-3">
         <button id="btnOn" class="btn btn-success btn-custom"><i class="fas fa-lightbulb"></i> Encender</button>
         <button id="btnOff" class="btn btn-danger btn-custom"><i class="fas fa-power-off"></i> Apagar</button>
       </div>
 
-      <!-- ESTADO DEL LED -->
-      <div id="status" class="mt-2 fs-5 mb-4">
+      <div id="status" class="mt-3 fs-5">
         <span class="status-icon"><i class="fas fa-circle-notch fa-spin"></i></span>
-        <span class="fw-bold">Cargando estado del LED...</span>
-      </div>
-
-      <!-- DATOS DEL SENSOR -->
-      <div id="sensor" class="mt-4">
-        <h5 class="mb-3">🌡️ Datos del Sensor DHT11</h5>
-        <p>Temperatura: <span id="temp">--</span> °C</p>
-        <p>Humedad: <span id="hum">--</span> %</p>
-        <p>Hora de lectura: <span id="ts">--</span></p>
+        <span class="fw-bold">Cargando estado...</span>
       </div>
     </div>
   </div>
@@ -69,7 +58,6 @@
   <script>
     const URL_FUNCTION_SET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/enviarmensaje";
     const URL_FUNCTION_GET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/leergemelo";
-    const URL_SENSOR_GET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/leersensor1";
 
     const statusLabel = document.querySelector("#status span.fw-bold");
     const statusIcon = document.querySelector("#status .status-icon i");
@@ -126,24 +114,8 @@
       }
     }
 
-    async function leerSensor() {
-      try {
-        const res = await fetch(URL_SENSOR_GET);
-        if (res.ok) {
-          const data = await res.json();
-          document.getElementById("temp").textContent = data.temperatura ?? "--";
-          document.getElementById("hum").textContent = data.humedad ?? "--";
-          document.getElementById("ts").textContent = data.timestamp ?? "--";
-        }
-      } catch (err) {
-        console.error("Error leyendo sensor:", err);
-      }
-    }
-
     leerEstadoActual();
-    leerSensor();
     setInterval(leerEstadoActual, 10000);
-    setInterval(leerSensor, 10000);
   </script>
 </body>
 </html>
