--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     body {
-      background-color: #0d1117;
-      color: #c9d1d9;
+      background: linear-gradient(135deg, #141e30, #243b55);
+      color: white;
+      min-height: 100vh;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     .btn-custom {
       width: 160px;
     }
     .glass-panel {
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(255, 255, 255, 0.1);
       border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 15px;
       padding: 30px;
-      box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
     }
     .status-icon {
       font-size: 1.2rem;
@@ -32,6 +34,12 @@
     .led-icon {
       font-size: 4rem;
       margin: 20px 0;
+    }
+    .footer {
+      margin-top: 3rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #aaa;
     }
   </style>
 </head>
@@ -53,10 +61,14 @@
         <span class="fw-bold">Cargando estado...</span>
       </div>
     </div>
+
+    <div class="footer">
+      <p>&copy; 2025 Proyecto Azure Digital Twins · Desarrollado por <strong>Andrés Meneses</strong></p>
+    </div>
   </div>
 
   <script>
-    const URL_FUNCTION_SET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/enviarmensaje";
+    const URL_FUNCTION_SET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/actualizargemelo";
     const URL_FUNCTION_GET = "https://funciondelgemelo-hwdrbnbwg7b5dqej.eastus-01.azurewebsites.net/api/leergemelo";
 
     const statusLabel = document.querySelector("#status span.fw-bold");
@@ -74,8 +86,8 @@
       try {
         const res = await fetch(URL_FUNCTION_SET, {
           method: "POST",
-          headers: { "Content-Type": "text/plain" },
-          body: estado
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ estado })
         });
 
         if (res.ok) {
